# py-venv-pth-issue

./: BUILD.bazel  MODULE.bazel  README.md  requirements_lock.txt
app/: BUILD.bazel  main.py  test_venv.sh
lib/calculator/: BUILD.bazel  __init__.py  calculator.py
